# Game_of_life

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindSDL2.cmake
include/: config.h  game.h  input.h  renderer.h
src/: game.cpp  input.cpp  main.cpp  renderer.cpp
